--- a/MarketPricingSystem/MarketPricingSystem/Views/Users/Settings.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Users/Settings.cshtml
@@ -36,7 +36,7 @@
                 </div>
                 <div class="col-md-6 pt-md-0 pt-3">
                     <label for="pass">Password</label>
-                    <input type="text" id="pass" class="bg-light form-control" placeholder="@Model.Password" name="newpassword" >
+                    <input type="password" id="pass" class="bg-light form-control" value="wefwerwerwerasdasd" name="newpassword" >
                 </div>
             </div>
 
