--- a/MarketPricingSystem/MarketPricingSystem/Views/Roles/Updaterole.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Roles/Updaterole.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<MarketPricingSystem.Models.Permissions>
+﻿@model  MarketPricingSystem.ViewModel.roleandpermissionsandcheckedone
 
 
 @{
@@ -17,12 +17,14 @@
                     <div class="card-body">
 
 
-                        <form method="post" action="/Roles/ConfirmCreate">
+                        <form method="post" action="/Roles/Confirmupdate">
 
+                            <input type="hidden" value="@Model.role.RoleId" name="roleid"/>
+                            <h6 style="color:red;opacity:0.5">@TempData["Message1"]</h6>
                             <div class="row mb-3">
                                 <div class="col-md-6">
                                     <div class="form-floating mb-3 mb-md-0">
-                                        <input class="form-control" id="Rolename" type="text" name="Rolename" required />
+                                        <input class="form-control" id="Rolename" type="text" name="Rolename" value="@Model.role.RoleName" required />
                                         <label for="Rolename"> Role Name</label>
                                     </div>
                                 </div>
@@ -31,19 +33,43 @@
 
 
 
-
+                           
 
                             <div class="row mb-3">
 
 
-                                @foreach (var permission in Model)
+                                @foreach (var permission in Model.permissions)
                                 {
-
+                                    var flag = true;
                                     <div class="col-md-6">
 
-                                        <input style=" cursor: pointer;" class="form-check-input" type="checkbox" id="@permission.PermissionName" name="@permission.PermissionName" value="@permission.PermissionId">
+                                        @foreach (var checkedperm in Model.checkedpermissionsid)
+                                        {
 
-                                        <label style=" cursor: pointer;" for="@permission.PermissionName"> @permission.PermissionName</label><br>
+
+
+                                            if (permission.PermissionId == checkedperm.PermissionId)
+                                            {
+                                                <input style=" cursor: pointer;" class="form-check-input" type="checkbox" id="@permission.PermissionName" name="@permission.PermissionName" checked value="@permission.PermissionId">
+
+                                                <label style=" cursor: pointer;" for="@permission.PermissionName"> @permission.PermissionName</label><br>
+
+                                                flag = false;
+
+                                            }
+
+
+                                        }
+
+                                        @if (flag == true)
+                                        {
+                                            <input style=" cursor: pointer;" class="form-check-input" type="checkbox" id="@permission.PermissionName" name="@permission.PermissionName" value="@permission.PermissionId">
+
+                                            <label style=" cursor: pointer;" for="@permission.PermissionName"> @permission.PermissionName</label><br>
+
+                                        }
+
+
 
                                     </div>
 
@@ -56,10 +82,10 @@
 
 
 
-                            </div>    
+                            </div>
 
                             <div class="mt-4 mb-0">
-                                <div class="d-grid"> <button type="submit" class="btn btn-primary"> Add</button> </div>
+                                <div class="d-grid"> <button type="submit" class="btn btn-primary"> update</button> </div>
                             </div>
                         </form>
 
