--- a/MarketPricingSystem/MarketPricingSystem/Views/Shared/_LayoutPageUser.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Shared/_LayoutPageUser.cshtml
@@ -113,7 +113,7 @@
 
                 <div class="sb-sidenav-footer">
                     <div class="small">Logged in as:</div>
-                    @User.Identity.Name
+                    @User.Identity.Name.Split(',').First()
                 </div>
 
 
